--- a/web-api/src/main/resources/config/application.yml
+++ b/web-api/src/main/resources/config/application.yml
@@ -943,16 +943,16 @@ msg:
 #  passwd:
 #
 elasticsearch:
-  ip: es-4uienven.public.tencentelasticsearch.com
-  port: 9200
-  scheme: https
-  user: elastic
-  passwd: ZRu8UqZG
-#  ip: 124.222.232.134
+#  ip: es-4uienven.public.tencentelasticsearch.com
 #  port: 9200
-#  scheme: http
+#  scheme: https
 #  user: elastic
-#  passwd: 24KmVo1FfoyNk65YMr8j
+#  passwd: ZRu8UqZG
+  ip: 124.222.232.134
+  port: 9200
+  scheme: http
+  user: elastic
+  passwd: 24KmVo1FfoyNk65YMr8j
 
 dtk:
   appKey: 647802ed3a2b4
@@ -964,8 +964,8 @@ xxl:
     adminAddresses: https://task.mtxtool.com/xxl-job-admin
     appname: JeeCat
     accessToken: '2fadea384aeea2b87a77837b11e4f3d1'
-    address: 119.45.117.100:9999
-    ip: 119.45.117.100
+    address:
+    ip:
     port: 39999
     logPath: logs/jeecat/job/jobhandler/
     logRetentionDays: 30
