--- a/web-api/src/main/resources/config/application.yml
+++ b/web-api/src/main/resources/config/application.yml
@@ -49,112 +49,26 @@ server:
 #======================================#
 
 # 数据库连接
-jdbc: 
-  
+jdbc:
+
   # Mysql 数据库配置
   type: mysql
   driver: com.mysql.cj.jdbc.Driver
-#  url: jdbc:mysql://127.0.0.1:3306/csaas?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
-#  username: root
-#  password:
   url: jdbc:mysql://124.221.5.56:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
   username: root
   password: vXRXf#}4}Y}a9M)mfC]8
   testSql: SELECT 1
 
-#  # Oracle 数据库配置（若使用 12c，请修改 /modules/core/pom.xml 文件，打开 12c 依赖，去掉 11g 依赖）
-#  type: oracle
-#  driver: oracle.jdbc.OracleDriver
-#  url: jdbc:oracle:thin:@127.0.0.1:1521/orcl
-#  username: jeesite
-#  password: jeesite
-#  testSql: SELECT 1 FROM DUAL
-
-#  # Sql Server 数据库配置（2008）
-#  type: mssql
-#  driver: net.sourceforge.jtds.jdbc.Driver
-#  url: jdbc:jtds:sqlserver://127.0.0.1:1433/jeesite
-#  username: jeesite
-#  password: jeesite
-#  testSql: SELECT 1
-
-#  # Sql Server 数据库配置（2012以上版本）（请修改 /modules/core/pom.xml 文件，打开 SqlServer 2012 依赖）
-#  type: mssql2012
-#  driver: com.microsoft.sqlserver.jdbc.SQLServerDriver
-#  url: jdbc:sqlserver://127.0.0.1:1433;DatabaseName=jeesite
-#  username: jeesite
-#  password: jeesite
-#  testSql: SELECT 1
-  
-#  # PostgreSql 数据库配置
-#  type: postgresql
-#  driver: org.postgresql.Driver
-#  url: jdbc:postgresql://127.0.0.1:5432/jeesite
-#  username: jeesite
-#  password: jeesite
-#  testSql: SELECT 1
-
-#  # H2 数据库配置（请修改 /modules/core/pom.xml 文件，打开 H2 DB 依赖）
-#  type: h2
-#  driver: org.h2.Driver
-#  url: jdbc:h2:~/jeesite-db/jeesite
-#  username: jeesite
-#  password: jeesite
-#  testSql: SELECT 1
-
-  # 连接信息加密
-  encrypt:
-  
-    # 加密连接用户名
-    username: false
-    # 加密连接密码
-    password: true
-
   # 数据库连接池配置
   pool:
-  
+
     # 初始化连接数
     init: 1
-    # 最小空闲连接数
+    # 最小连接数
     minIdle: 3
-    # 最大激活连接数
-    maxActive: 20
+    # 最大连接数
+    maxActive: 1000
 
-#    # 获取连接等待超时时间，单位毫秒（1分钟）（4.0.6+）
-#    maxWait: 60000
-#    
-#    # 从池中取出和归还连接前进行检验，如果检验失败，则从池中去除连接并尝试取出另一个（4.0.6+）
-#    testOnBorrow: false
-#    testOnReturn: false
-#    
-#    # 间隔多久才进行一次检测，检测需要关闭的空闲连接，单位毫秒（1分钟）（4.0.6+）
-#    timeBetweenEvictionRunsMillis: 60000
-#    
-#    # 一个连接在池中最小空闲的时间，单位毫秒（20分钟）（4.0.6+）
-#    minEvictableIdleTimeMillis: 1200000
-#    # 一个连接在池中最大空闲的时间，单位毫秒（30分钟）（4.1.2+）
-#    maxEvictableIdleTimeMillis: 1800000
-#    
-#    # 连接池中的minIdle数量以内的连接，空闲时间超过minEvictableIdleTimeMillis，则会执行keepAlive操作（4.1.8+）
-#    keepAlive: false
-#    
-#    # 是否自动回收泄露的连接和超时时间，单位秒（35分钟）（4.0.6+）
-#    removeAbandoned: false
-#    removeAbandonedTimeout: 2100
-#
-#    # Oracle 下会自动开启 PSCache，并指定每个连接上 PSCache 大小。若不指定，则与 maxActive 相同（4.1.5+）
-#    maxPoolPreparedStatementPerConnectionSize: ~
-#    
-#    # 设置连接属性，可获取到表的 remark (备注)
-#    remarksReporting: false
-
-#  # 读写分离配置（专业版）v4.3.0
-#  readwriteSplitting:
-#    # 读库的数据源名称列表（默认数据源）
-#    readDataSourceNames: ds_read_01, ds_read_02
-#    # 负载均衡算法（ROUND_ROBIN轮询、RANDOM随机、自定义类名）
-#    loadBalancerAlgorithm: RANDOM
-#
   # 多数据源名称列表，多个用逗号隔开，使用方法：@MyBatisDao(dataSourceName="ds2")
   dataSourceNames: ds2
 
@@ -174,12 +88,12 @@ jdbc:
     pool:
       init: 1
       minIdle: 3
-      maxActive: 20
+      maxActive: 1000
     # 其它数据源支持读写分离
     readwriteSplitting:
       readDataSourceNames: ~
       loadBalancerAlgorithm: RANDOM
-#  
+
 #  # 默认数据源的从库02
 #  ds_read_02:
 #    type: mysql
