--- a/common/pom.xml
+++ b/common/pom.xml
@@ -96,6 +96,11 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+		</dependency>
 		
 		<!-- Email -->
 		<dependency>
