--- a/web-api/src/main/resources/config/application-prod.yml
+++ b/web-api/src/main/resources/config/application-prod.yml
@@ -13,9 +13,10 @@ jdbc:
   # Mysql 数据库配置
   type: mysql
   driver: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://124.221.5.56:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+#  url: jdbc:mysql://82.157.6.8:3308/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+  url: jdbc:mysql://106.52.146.81:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
   username: root
-  password: vXRXf#}4}Y}a9M)mfC]8
+  password: vXRXf#}4}Y}a8M)mfC66
   testSql: SELECT 1
 
   # 数据库连接池配置
@@ -27,9 +28,31 @@ jdbc:
     minIdle: 3
     # 最大连接数
     maxActive: 1000
+  # 其它数据源支持读写分离
+  readwriteSplitting:
+    readDataSourceNames: ~
+    loadBalancerAlgorithm: RANDOM
 
   # 多数据源名称列表，多个用逗号隔开，使用方法：@MyBatisDao(dataSourceName="ds2")
-  dataSourceNames: ds2
+  dataSourceNames: ds2,maoche_java
+
+  maoche-java:
+    type: mysql
+    driver: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://124.222.232.134:6608/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+    username: root
+    password: vXRXf#}4}Y}a9M)mfC]8
+    testSql: SELECT 1
+    # 其它数据源支持密码加密
+    encrypt:
+      username: false
+      password: true
+    # 其它数据源支持连接池设置
+    pool:
+      init: 1
+      minIdle: 3
+      maxActive: 1000
+
 
   # 多数据源配置：ds2
   ds2:
