--- a/web-api/src/main/resources/config/application.yml
+++ b/web-api/src/main/resources/config/application.yml
@@ -54,9 +54,9 @@ jdbc:
   # Mysql 数据库配置
   type: mysql
   driver: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://124.221.5.56:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+  url: jdbc:mysql://106.52.146.81:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
   username: root
-  password: vXRXf#}4}Y}a9M)mfC]8
+  password: vXRXf#}4}Y}a8M)mfC66
   testSql: SELECT 1
 
   # 数据库连接池配置
@@ -76,9 +76,9 @@ jdbc:
   ds2:
     type: mysql
     driver: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://82.157.6.8:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://106.52.146.81:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
     username: root
-    password: vXRXf#}4}Y}a8M)mfC]9
+    password: vXRXf#}4}Y}a8M)mfC66
     testSql: SELECT 1
     # 其它数据源支持密码加密
     encrypt:
