--- a/modules/cat/pom.xml
+++ b/modules/cat/pom.xml
@@ -90,6 +90,12 @@
 			<systemPath>${project.basedir}/libs/open-platform-fetch-1.0.0.jar</systemPath>
 		</dependency>
 
+		<dependency>
+			<groupId>info.debatty</groupId>
+			<artifactId>java-string-similarity</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 	</dependencies>
 	
 	<developers>  
