--- a/web-api/pom.xml
+++ b/web-api/pom.xml
@@ -110,8 +110,20 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/libs/open-platform-fetch-1.0.0.jar</systemPath>
 		</dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch-core</artifactId>
+            <version>7.17.9</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.68</version>
+		</dependency>
+
+    </dependencies>
 	
 	<build>
 		<finalName>${finalName}</finalName>
