--- a/modules/cat/pom.xml
+++ b/modules/cat/pom.xml
@@ -72,7 +72,11 @@
 			<version>${xxl-job-core.version}</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.16.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.itextpdf</groupId>
