--- a/web-api/src/main/resources/config/application.yml
+++ b/web-api/src/main/resources/config/application.yml
@@ -54,9 +54,9 @@ jdbc:
   # Mysql 数据库配置
   type: mysql
   driver: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://106.52.146.81:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+  url: jdbc:mysql://127.0.0.1:3306/csaas?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
   username: root
-  password: vXRXf#}4}Y}a8M)mfC66
+  password:
   testSql: SELECT 1
 
   # 数据库连接池配置
@@ -95,6 +95,29 @@ jdbc:
     readwriteSplitting:
       readDataSourceNames: ~
       loadBalancerAlgorithm: RANDOM
+
+    # 多数据源配置：ds3 商品库
+    product:
+      type: mysql
+      driver: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://139.224.115.183:6606/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+      username: maoche
+      password: ojpg@j0nSd
+      #    password: vXRXf#}4}Y}a8M)mfC66
+      testSql: SELECT 1
+      # 其它数据源支持密码加密
+      encrypt:
+        username: false
+        password: true
+      # 其它数据源支持连接池设置
+      pool:
+        init: 20
+        minIdle: 20
+        maxActive: 1000
+      # 其它数据源支持读写分离
+      readwriteSplitting:
+        readDataSourceNames: ~
+        loadBalancerAlgorithm: RANDOM
 
 #  # 默认数据源的从库02
 #  ds_read_02:
