公海+到手价

--- a/web-api/src/main/resources/config/application-prod.yml
+++ b/web-api/src/main/resources/config/application-prod.yml
@@ -34,7 +34,7 @@ jdbc:
     loadBalancerAlgorithm: RANDOM
 
   # 多数据源名称列表，多个用逗号隔开，使用方法：@MyBatisDao(dataSourceName="ds2")
-  dataSourceNames: ds2,maoche_java
+  dataSourceNames: ds2,maoche_java,maoche_product
 
   maoche-java:
     type: mysql
@@ -42,6 +42,23 @@ jdbc:
     url: jdbc:mysql://124.222.232.134:6608/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
     username: root
     password: vXRXf#}4}Y}a9M)mfC]8
+    testSql: SELECT 1
+    # 其它数据源支持密码加密
+    encrypt:
+      username: false
+      password: true
+    # 其它数据源支持连接池设置
+    pool:
+      init: 10
+      minIdle: 30
+      maxActive: 1000
+
+  maoche_product:
+    type: mysql
+    driver: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://139.224.115.183:6606/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+    username: maoche
+    password: ojpg@j0nSd
     testSql: SELECT 1
     # 其它数据源支持密码加密
     encrypt:
