--- a/common/pom.xml
+++ b/common/pom.xml
@@ -243,6 +243,12 @@
 			<artifactId>logback-classic</artifactId>
 		</dependency>
 		<!-- Logging end -->
+
+		<dependency>
+			<groupId>com.belerweb</groupId>
+			<artifactId>pinyin4j</artifactId>
+			<version>2.5.1</version>
+		</dependency>
 		
 		<!-- Spring begin -->
 		<dependency>
