--- a/web-api/src/main/resources/config/application.yml
+++ b/web-api/src/main/resources/config/application.yml
@@ -94,7 +94,7 @@ jdbc:
     type: mysql
     driver: com.mysql.cj.jdbc.Driver
 #    url: jdbc:mysql://106.52.146.81:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
-    url: jdbc:mysql://82.157.6.8:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://mysql.mtxtool.com:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
     username: root
     password: vXRXf#}4}Y}a8M)mfC]9
 #    password: vXRXf#}4}Y}a8M)mfC66
