--- a/modules/cat/pom.xml
+++ b/modules/cat/pom.xml
@@ -100,6 +100,12 @@
 			<version>2.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.9.0</version>
+		</dependency>
+
 	</dependencies>
 	
 	<developers>  
