--- a/web-api/pom.xml
+++ b/web-api/pom.xml
@@ -129,6 +129,12 @@
 			<version>1.68</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
     </dependencies>
 	
 	<build>
