--- a/web-api/src/main/resources/config/application.yml
+++ b/web-api/src/main/resources/config/application.yml
@@ -54,11 +54,15 @@ jdbc:
   # Mysql 数据库配置
   type: mysql
   driver: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://127.0.0.1:3306/csaas?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+  #  url: jdbc:mysql://82.157.6.8:3308/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+  #  url: jdbc:mysql://106.52.146.81:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+  #  username: root
+  #  password: vXRXf#}4}Y}a8M)mfC66
+  #  testSql: SELECT 1
+  url: jdbc:mysql://sh-cdb-7ulfxtus.sql.tencentcdb.com:27983/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
   username: root
-  password:
+  password: 4vqCz_bTo.b2Xh*.
   testSql: SELECT 1
-
   # 数据库连接池配置
   pool:
 
@@ -68,14 +72,34 @@ jdbc:
     minIdle: 20
     # 最大连接数
     maxActive: 1000
+  # 其它数据源支持读写分离
+  readwriteSplitting:
+    readDataSourceNames: ~
+    loadBalancerAlgorithm: RANDOM
 
   # 多数据源名称列表，多个用逗号隔开，使用方法：@MyBatisDao(dataSourceName="ds2")
-  dataSourceNames: ds2,maoche_product
+  dataSourceNames: ds2,maoche_java,maoche_product
+
+  maoche-java:
+    type: mysql
+    driver: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://124.222.232.134:6608/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+    username: root
+    password: vXRXf#}4}Y}a9M)mfC]8
+    testSql: SELECT 1
+    # 其它数据源支持密码加密
+    encrypt:
+      username: false
+      password: true
+    # 其它数据源支持连接池设置
+    pool:
+      init: 10
+      minIdle: 30
+      maxActive: 1000
 
   maoche_product:
     type: mysql
     driver: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://139.224.115.183:6606/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
     url: jdbc:mysql://sh-cdb-7ulfxtus.sql.tencentcdb.com:27983/maoche_v2?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
     username: root
     password: 4vqCz_bTo.b2Xh*.
@@ -90,15 +114,14 @@ jdbc:
       minIdle: 30
       maxActive: 1000
 
+
   # 多数据源配置：ds2
   ds2:
     type: mysql
     driver: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://106.52.146.81:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
-    url: jdbc:mysql://mysql.mtxtool.com:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://120.53.235.231:6607/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
     username: root
     password: vXRXf#}4}Y}a8M)mfC]9
-#    password: vXRXf#}4}Y}a8M)mfC66
     testSql: SELECT 1
     # 其它数据源支持密码加密
     encrypt:
@@ -107,35 +130,13 @@ jdbc:
     # 其它数据源支持连接池设置
     pool:
       init: 20
-      minIdle: 20
+      minIdle: 30
       maxActive: 1000
     # 其它数据源支持读写分离
     readwriteSplitting:
       readDataSourceNames: ~
       loadBalancerAlgorithm: RANDOM
 
-    # 多数据源配置：ds3 商品库
-    product:
-      type: mysql
-      driver: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://sh-cdb-7ulfxtus.sql.tencentcdb.com:27983/maoche?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
-      username: root
-      password: 4vqCz_bTo.b2Xh*.
-      #    password: vXRXf#}4}Y}a8M)mfC66
-      testSql: SELECT 1
-      # 其它数据源支持密码加密
-      encrypt:
-        username: false
-        password: true
-      # 其它数据源支持连接池设置
-      pool:
-        init: 20
-        minIdle: 20
-        maxActive: 1000
-      # 其它数据源支持读写分离
-      readwriteSplitting:
-        readDataSourceNames: ~
-        loadBalancerAlgorithm: RANDOM
 
 #  # 默认数据源的从库02
 #  ds_read_02:
@@ -919,10 +920,13 @@ xxl:
   job:
     enabled: false
     adminAddresses: https://task.mtxtool.com/xxl-job-admin
-    appname: JeeCat
-    accessToken: '2fadea384aeea2b87a77837b11e4f3d1'
+    appname: jeeCat
+    accessToken: 2fadea384aeea2b87a77837b11e4f3d1
     address:
     ip:
-    port: 39999
+    port: 28980
     logPath: logs/jeecat/job/jobhandler/
     logRetentionDays: 30
+
+rpa:
+  domain: http://127.0.0.1:48080
