--- a/common/pom.xml
+++ b/common/pom.xml
@@ -280,6 +280,18 @@
             <scope>compile</scope>
         </dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>easyexcel</artifactId>
+			<version>4.0.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>33.2.1-jre</version>
+		</dependency>
+
     </dependencies>
 	
 	<developers>  
