--- a/modules/cat/pom.xml
+++ b/modules/cat/pom.xml
@@ -88,6 +88,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.hankcs</groupId>
+			<artifactId>hanlp</artifactId>
+			<version>portable-1.8.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>layout</artifactId>
 			<version>7.1.2</version>
@@ -120,6 +126,7 @@
 			<artifactId>emoji-java</artifactId>
 			<version>5.1.1</version>
 		</dependency>
+
 
 	</dependencies>
 	
